@@ -145,6 +145,9 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       "sparse" arrays correctly.
     - deduplicate.sh: quote "${arr[@]}" correctly to not suddenly force word
       splitting.
+    - deduplicate.sh: fix parse_otool_output: we want to return failure only
+      iff any of the strings are present in otool's output and actually handle
+      the failure string *ARRAY* correctly as that.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
